Fix score align

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,8 @@ h2 {
     width: 100px;
     height: 100px;
     background-color: black;
+    align-items: center;
+    justify-content: center;
 }
 
 #rounds {
